--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aglalberto</title>
+    <title>Aglal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/48/source-code.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -28,9 +30,7 @@
             <div>
                 <h1>Olá, sou o Aglalberto</h1>
                 <p>Trabalho com tecnologia e design desde 2014</p>
-                <div>
-                    <img id="profile-picture" src="assets/pp.png" width="180" alt="profile picture">
-                </div>
+
             </div>
             <div id="scroll-icon">
                 <dotlottie-player src="https://lottie.host/4502cd85-35d2-4d06-b46e-702e4614142b/obQAwHPKdE.json"
@@ -39,14 +39,195 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <p>asdasd</p>
+    <div class="container d-grid justify-content-around mt-3 w-100">
+
+        <h1 style="font-size: 4rem; font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">SKILLS</h1>
+
+        <div class="row cols-sm-3 w-100 m-0">
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/html-5--v1.png" alt="HTML5" />
+                <p>HTML5</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/css3.png" alt="CSS3" />
+                <p>CSS3</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/javascript--v1.png" alt="Javascript" />
+                <p>Javascript</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/bootstrap--v2.png" alt="Bootstrap" />
+                <p>Bootstrap</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color-glass/96/adobe-photoshop.png"
+                    alt="Photoshop" />
+                <p>Photoshop</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color-glass/96/adobe-illustrator.png"
+                    alt="Illustrator" />
+                <p>Illustrator</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/figma--v1.png" alt="Figma" />
+                <p>Figma</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/fluency/96/prototype.png" alt="" />
+                <p>UX & UI</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img style="filter: brightness(1.7);" width="70" height="70"
+                    src="https://img.icons8.com/color/96/dynamics-365.png" alt="" />
+                <p>Dynamics 365</p>
+            </div>
+        </div>
+
+        <div class="mt-3">
+            <h1 style="font-size: 4rem; font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">FORMAÇÃO
+            </h1>
+        </div>
+
+        <div class="container">
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2015</span> Bacharel em
+                Audiovisual e Novas Mídias pela <span class="fs-4"
+                    style="color: #a8dacb; font-weight: 700;">UNIFOR</span> </p>
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2018</span> MBA em Design
+                Gráfico e Digital pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;">UNIFOR</span></p>
+
+            <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2023</span> Análise e
+                Desenvolvimento de Sistemas pela <span class="fs-4"
+                    style="color: #a8dacb; font-weight: 700;">ESTÁCIO</span></p>
+
+            <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2025</span> Fullstack
+                Javascript Developer pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;">YOUTH
+                    SPACE</span></p>
+        </div>
+
+        <div class="mt-3" style="overflow-x: hidden;">
+            <h1 id="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">EXPERIÊNCIA
+                PROFISSIONAL
+            </h1>
+        </div>
+
+        <div class="container">
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2014-2016</span> Estágio em
+                Tecnologia da Informação e Comunicação (TIC) no <a href="https://vortex.unifor.br/"
+                    target="_blank"><span class="fs-4" style="color: #a8dacb; font-weight: 700;">VORTEX - UNIFOR</span>
+                    <i class="bi bi-box-arrow-up-right" style="color: #a8dacb;"></i></a></p>
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2016-2019</span> Bolsista em
+                Tecnologia da Informação e Comunicação (TIC) na <a
+                    href="https://issuu.com/sofiacavalcante/docs/citilab-versao_digital/20" target="_blank"><span
+                        class="fs-4" style="color: #a8dacb; font-weight: 700;">Fundação de Ciência, Tecnologia e
+                        Inovação de Fortaleza (CITINOVA)</span> <i class="bi bi-box-arrow-up-right"
+                        style="color: #a8dacb;"></i></a></p>
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2020-2023</span> Sócio
+                Empreendedor com a <a href="https://linktr.ee/pessetech" target="_blank"><span class="fs-4"
+                        style="color: #a8dacb; font-weight: 700;">PESSE Tecnologia em Logística</span> <i
+                        class="bi bi-box-arrow-up-right" style="color: #a8dacb;"></i></a></p>
+
+            <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span> Analista de
+                CRM na <a href="https://unifor.br" target="_blank"><span class="fs-4"
+                        style="color: #a8dacb; font-weight: 700;">UNIFOR</span> <i class="bi bi-box-arrow-up-right"
+                        style="color: #a8dacb;"></i></a></p>
+
+        </div>
+
+        <div class="mt-3">
+            <h1 id="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">
+                ALGUNS TRABALHOS
+            </h1>
+        </div>
+
+
+
     </div>
 
-   
+    <div id="works" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+                aria-label="Slide 5"></button>
+
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://i.ibb.co/FJq5bNQ/BIT-MED.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.ibb.co/0rrw0BL/Isanex.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.ibb.co/cL78Pv5/Miva.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.ibb.co/6rkCsnk/Resta1.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img src="https://i.ibb.co/VCJxfxD/Telecall.png" class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#works" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#works" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
+    <div class="d-grid" id="contact">
+        <div class="btn-group row row-cols-2 m-0" role="group" aria-label="Basic example">
+            <div class="col p-0">
+                <a href="https://wa.me/55085997740061" target="_blank"></a><button id="whatsapp" type="button"
+                    class="btn btn-primary w-100"><i class="bi bi-whatsapp" style="color: white;"></i>
+                    WhatsApp</button></a>
+            </div>
+
+            <div class="col p-0">
+                <a href="https://www.linkedin.com/in/aglalberto-silva/" target="_blank"><button id="linkedin"
+                        type="button" class="btn btn-primary w-100"><i class="bi bi-linkedin" style="color: white;"></i>
+                        Linkedin</button></a>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
