--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                     autoplay></dotlottie-player>
             </div>
         </div>
+
     </div>
+
     <div class="container d-grid justify-content-around mt-3 w-100">
 
-        <h1 style="font-size: 4rem; font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">SKILLS</h1>
+        <h1 style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">SKILLS</h1>
 
         <div class="row cols-sm-3 w-100 m-0">
             <div class="col text-center" data-aos="zoom-in">
@@ -85,8 +87,8 @@
             </div>
         </div>
 
-        <div class="mt-3">
-            <h1 style="font-size: 4rem; font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">FORMAÇÃO
+        <div class="mt-5">
+            <h1 style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">FORMAÇÃO
             </h1>
         </div>
 
@@ -108,8 +110,8 @@
                     SPACE</span></p>
         </div>
 
-        <div class="mt-3" style="overflow-x: hidden;">
-            <h1 id="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">EXPERIÊNCIA
+        <div class="mt-5" style="overflow-x: hidden;">
+            <h1 class="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">EXPERIÊNCIA
                 PROFISSIONAL
             </h1>
         </div>
@@ -140,8 +142,8 @@
 
         </div>
 
-        <div class="mt-3">
-            <h1 id="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">
+        <div class="mt-5">
+            <h1 class="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">
                 ALGUNS TRABALHOS
             </h1>
         </div>
@@ -207,7 +209,7 @@
     <div class="d-grid" id="contact">
         <div class="btn-group row row-cols-2 m-0" role="group" aria-label="Basic example">
             <div class="col p-0">
-                <a href="https://wa.me/55085997740061" target="_blank"></a><button id="whatsapp" type="button"
+                <a href="https://wa.me/55085997740061" target="_blank"><button id="whatsapp" type="button"
                     class="btn btn-primary w-100"><i class="bi bi-whatsapp" style="color: white;"></i>
                     WhatsApp</button></a>
             </div>
