--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#works" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon" style="display: none;" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#works" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon" style="display: none;" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
 
-    <div class="d-grid" id="contact">
-        <div class="btn-group row row-cols-2 m-0" role="group" aria-label="Basic example">
+    <div class="d-grid" id="socials">
+        <div class="btn-group row row-cols-3 m-0" role="group" aria-label="Basic example">
             <div class="col p-0">
                 <a href="https://wa.me/55085997740061" target="_blank"><button id="whatsapp" type="button"
                     class="btn btn-primary w-100"><i class="bi bi-whatsapp" style="color: white;"></i>
@@ -218,6 +218,12 @@
                 <a href="https://www.linkedin.com/in/aglalberto-silva/" target="_blank"><button id="linkedin"
                         type="button" class="btn btn-primary w-100"><i class="bi bi-linkedin" style="color: white;"></i>
                         Linkedin</button></a>
+            </div>
+
+            <div class="col p-0">
+                <a href="https://github.com/aglalberto" target="_blank"><button id="github"
+                        type="button" class="btn btn-primary w-100"><i class="bi bi-github" style="color: white;"></i>
+                        Github</button></a>
             </div>
         </div>
     </div>
