--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 
             </div>
             <div id="scroll-icon">
-                <dotlottie-player src="https://lottie.host/4502cd85-35d2-4d06-b46e-702e4614142b/obQAwHPKdE.json"
+                <dotlottie-player id="scroll-desktop" src="https://lottie.host/4502cd85-35d2-4d06-b46e-702e4614142b/obQAwHPKdE.json"
                     background="transparent" speed="1" style="width: 60px; height: 60px;" loop
+                    autoplay></dotlottie-player>
+                <dotlottie-player id="scroll-mobile" src="https://lottie.host/fdfb9f8b-c906-4b80-b7d2-d939a276a032/Dr1dZOeiRF.json"
+                    background="transparent" speed="1" style="width: 110px; height: 110px;" loop
                     autoplay></dotlottie-player>
             </div>
         </div>
@@ -210,8 +213,8 @@
         <div class="btn-group row row-cols-3 m-0" role="group" aria-label="Basic example">
             <div class="col p-0">
                 <a href="https://wa.me/55085997740061" target="_blank"><button id="whatsapp" type="button"
-                    class="btn btn-primary w-100"><i class="bi bi-whatsapp" style="color: white;"></i>
-                    WhatsApp</button></a>
+                        class="btn btn-primary w-100"><i class="bi bi-whatsapp" style="color: white;"></i>
+                        WhatsApp</button></a>
             </div>
 
             <div class="col p-0">
@@ -221,8 +224,8 @@
             </div>
 
             <div class="col p-0">
-                <a href="https://github.com/aglalberto" target="_blank"><button id="github"
-                        type="button" class="btn btn-primary w-100"><i class="bi bi-github" style="color: white;"></i>
+                <a href="https://github.com/aglalberto" target="_blank"><button id="github" type="button"
+                        class="btn btn-primary w-100"><i class="bi bi-github" style="color: white;"></i>
                         Github</button></a>
             </div>
         </div>
