--- a/index.html
+++ b/index.html
@@ -36,15 +36,17 @@
                 <dotlottie-player id="scroll-desktop" src="https://lottie.host/4502cd85-35d2-4d06-b46e-702e4614142b/obQAwHPKdE.json"
                     background="transparent" speed="1" style="width: 60px; height: 60px;" loop
                     autoplay></dotlottie-player>
-                <dotlottie-player id="scroll-mobile" src="https://lottie.host/fdfb9f8b-c906-4b80-b7d2-d939a276a032/Dr1dZOeiRF.json"
-                    background="transparent" speed="1" style="width: 110px; height: 110px;" loop
-                    autoplay></dotlottie-player>
+                <a href="#jumpto-skills">
+                    <dotlottie-player id="scroll-mobile" src="https://lottie.host/fdfb9f8b-c906-4b80-b7d2-d939a276a032/Dr1dZOeiRF.json"
+                        background="transparent" speed="1" style="width: 110px; height: 110px;" loop
+                        autoplay></dotlottie-player>
+                </a>
             </div>
         </div>
 
     </div>
 
-    <div class="container d-grid justify-content-around mt-3 w-100">
+    <div id="jumpto-skills" class="container d-grid justify-content-around mt-3 w-100">
 
         <h1 style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">SKILLS</h1>
 
