--- a/index.html
+++ b/index.html
@@ -159,20 +159,20 @@
 
     <div id="works" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            <button type="button" data-bs-target="#works" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            <button type="button" data-bs-target="#works" data-bs-slide-to="1"
                 aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            <button type="button" data-bs-target="#works" data-bs-slide-to="2"
                 aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+            <button type="button" data-bs-target="#works" data-bs-slide-to="3"
                 aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4"
+            <button type="button" data-bs-target="#works" data-bs-slide-to="4"
                 aria-label="Slide 5"></button>
 
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-bs-interval="5000">
                 <img src="https://i.ibb.co/FJq5bNQ/BIT-MED.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
@@ -201,12 +201,12 @@
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#works" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" style="display: none;" aria-hidden="true"></span>
+        <button id="carousel-prev-btn" class="carousel-control-prev" type="button" data-bs-target="#works" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#works" data-bs-slide="next">
-            <span class="carousel-control-next-icon" style="display: none;" aria-hidden="true"></span>
+        <button id="carousel-next-btn" class="carousel-control-next" type="button" data-bs-target="#works" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
     </div>
