--- a/index.html
+++ b/index.html
@@ -33,11 +33,13 @@
 
             </div>
             <div id="scroll-icon">
-                <dotlottie-player id="scroll-desktop" src="https://lottie.host/4502cd85-35d2-4d06-b46e-702e4614142b/obQAwHPKdE.json"
+                <dotlottie-player id="scroll-desktop"
+                    src="https://lottie.host/4502cd85-35d2-4d06-b46e-702e4614142b/obQAwHPKdE.json"
                     background="transparent" speed="1" style="width: 60px; height: 60px;" loop
                     autoplay></dotlottie-player>
                 <a href="#jumpto-skills">
-                    <dotlottie-player id="scroll-mobile" src="https://lottie.host/fdfb9f8b-c906-4b80-b7d2-d939a276a032/Dr1dZOeiRF.json"
+                    <dotlottie-player id="scroll-mobile"
+                        src="https://lottie.host/fdfb9f8b-c906-4b80-b7d2-d939a276a032/Dr1dZOeiRF.json"
                         background="transparent" speed="1" style="width: 110px; height: 110px;" loop
                         autoplay></dotlottie-player>
                 </a>
@@ -92,6 +94,8 @@
             </div>
         </div>
 
+        <!-- FORMAÇÃO -->
+
         <div class="mt-5">
             <h1 style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">FORMAÇÃO
             </h1>
@@ -115,6 +119,8 @@
                     SPACE</span></p>
         </div>
 
+        <!-- EXP PROFISSIONAL -->
+
         <div class="mt-5" style="overflow-x: hidden;">
             <h1 class="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">EXPERIÊNCIA
                 PROFISSIONAL
@@ -129,7 +135,7 @@
                     <i class="bi bi-box-arrow-up-right" style="color: #a8dacb;"></i></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2016-2019</span> Bolsista em
-                Tecnologia da Informação e Comunicação (TIC) na <a
+                Tecnologia da Informação e Comunicação (TIC) na UNIFOR pela <a
                     href="https://issuu.com/sofiacavalcante/docs/citilab-versao_digital/20" target="_blank"><span
                         class="fs-4" style="color: #a8dacb; font-weight: 700;">Fundação de Ciência, Tecnologia e
                         Inovação de Fortaleza (CITINOVA)</span> <i class="bi bi-box-arrow-up-right"
@@ -147,6 +153,97 @@
 
         </div>
 
+        <!-- MODAL -->
+
+        
+        <div class="container">
+            <button data-aos="zoom-in" id="journey-modal" type="button" class="btn btn-primary fs-5" data-bs-toggle="modal"
+                data-bs-target="#exampleModal">
+                <i class="bi bi-card-text" style="color: #a8dacb;"></i> Trajetória detalhada 
+            </button>
+            
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content" style="background-color: black; border: 2px solid white;">
+                        <div class="modal-footer">
+                            <p class="fs-4"><b>Trajetória detalhada</b></p>
+                            <button type="button" class="btn btn-light" data-bs-dismiss="modal">Fechar</button>
+                        </div>
+                        <div class="modal-body">
+                            <p>
+                                Em 2014 iniciei meu primeiro estágio no laboratório de inovação e tecnologia Vortex, situado
+                                na Universidade de Fortaleza.
+                            </p>
+                            <p>
+                                Este ambiente de inovação tecnológica, direcionado aos alunos dos cursos de computação, foi o
+                                cenário onde iniciei minha jornada profissional. Entre os 20 estagiários, tinham apenas eu e
+                                mais dois colegas da área de comunicação, imersos em um ambiente predominantemente ocupado por
+                                desenvolvedores. Foi ali que meu fascínio pela tecnologia se solidificou.
+                            </p>
+                            <p>
+                                Minhas principais responsabilidades incluiam o desenvolvimento de interfaces de usuário (UI) e
+                                experiência do usuário (UX), elaborando protótipos e interfaces para posterior implementação
+                                pelos desenvolvedores. Também assumi a liderança em projetos de integração acadêmica,
+                                facilitando reuniões com os clientes, em sua maioria alunos de Mestrado e Doutorado da
+                                Universidade, que buscavam concretizar suas ideias, proporcionando-me uma valiosa experiência
+                                multidisciplinar. Além disso, explorei a modelagem 3D para realidade aumentada e desempenhei
+                                diversas funções relacionadas ao design, enriquecendo ainda mais meu repertório profissional.
+                            </p>
+                            <p>
+                                Em 2016, ao término do estágio, o coordenador do laboratório reconheceu meu potencial e
+                                assegurou bolsas da Prefeitura de Fortaleza para que eu continuasse contribuindo como bolsista,
+                                assumindo também o papel de coordenador da equipe de design.
+                            </p>
+                            <p>
+                                Durante minha permanência no laboratório, participei de diversos desafios, como Hackathons, o
+                                Desafio Renault Experience e o Startup Weekend, onde aprendi bastante sobre empreendedorismo.
+                            </p>
+                            <p>
+                                Em 2016, um colega bolsista que atuava como desenvolvedor no laboratório me convidou para
+                                participar de um desses desafios, juntamente com outros dois desenvolvedores. Foi então que
+                                fundamos a Besalt Design e Tecnologia.
+                            </p>
+                            <p>
+                                A Besalt era uma softwarehouse especializada no desenvolvimento de softwares sob demanda. No
+                                entanto, em 2019, enfrentamos dificuldades para conciliar projetos externos com as demandas
+                                internas da empresa, o que culminou em seu encerramento.
+                            </p>
+                            <p>
+                                Em 2020, juntamente com os mesmos colegas com quem fundei a Besalt, iniciamos um novo
+                                empreendimento: a Pesse Tecnologia em Logística, agregando dois novos membros com experiência em
+                                logística.
+                            </p>
+                            <p>
+                                A Pesse era uma startup no qual criamos um aplicativo voltado para otimizar operações de
+                                empresas de transporte, permitindo a redução de custos e a melhoria da performance dos veículos
+                                por meio da análise detalhada dos dados provenientes dos sensores de telemetria instalados nos
+                                veículos.
+                            </p>
+                            <p>
+                                Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da
+                                Universidade de Fortaleza. No ano seguinte, em 2021, ele me convidou para trabalhar na Diretoria
+                                de Marketing com o novo CRM da Universidade, pois era preciso alguém com certa experiência em
+                                tecnologia e comunicação, aceitei a proposta e estou até hoje trabalhando como analista de CRM
+                                para captação de novos alunos.
+                            </p>
+                            <p>
+                                Em 2023, decidi por deixar a Pesse e concentrar meus esforços no aprimoramento das minhas
+                                habilidades como desenvolvedor. Assumi o compromisso de embarcar em uma jornada intensiva de
+                                estudos com o objetivo de me tornar um profissional exemplar nessa área. Atualmente, mantenho-me
+                                completamente focado nessa meta, impulsionado pela determinação e pelo empenho necessários para
+                                alcançá-la.
+                            </p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-light w-100" data-bs-dismiss="modal">Fechar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- ALGUNS TRABALHOS -->
+
         <div class="mt-5">
             <h1 class="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">
                 ALGUNS TRABALHOS
@@ -159,16 +256,12 @@
 
     <div id="works" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#works" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#works" data-bs-slide-to="1"
-                aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#works" data-bs-slide-to="2"
-                aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#works" data-bs-slide-to="3"
-                aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#works" data-bs-slide-to="4"
-                aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#works" data-bs-slide-to="0" class="active" aria-current="true"
+                aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#works" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#works" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#works" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#works" data-bs-slide-to="4" aria-label="Slide 5"></button>
 
         </div>
         <div class="carousel-inner">
@@ -201,11 +294,13 @@
                 </div>
             </div>
         </div>
-        <button id="carousel-prev-btn" class="carousel-control-prev" type="button" data-bs-target="#works" data-bs-slide="prev">
+        <button id="carousel-prev-btn" class="carousel-control-prev" type="button" data-bs-target="#works"
+            data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button id="carousel-next-btn" class="carousel-control-next" type="button" data-bs-target="#works" data-bs-slide="next">
+        <button id="carousel-next-btn" class="carousel-control-next" type="button" data-bs-target="#works"
+            data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
