--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
             <button data-aos="fade-zoom-in"
             data-aos-easing="ease-in-back"
            
-             id="journey-modal" type="button" class="btn btn-primary fs-5" data-bs-toggle="modal"
-                data-bs-target="#exampleModal">
-                <i class="bi bi-card-text" style="color: #a8dacb;"></i> Trajetória detalhada 
+             id="journey-modal-btn" type="button" class="btn btn-primary fs-6" data-bs-toggle="modal"
+                data-bs-target="#exampleModal" style="font-weight: 700; letter-spacing: 1px;">
+                <i class="bi bi-card-text"></i> TRAJETÓRIA DETALHADA
             </button>
             
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
