--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
                                 Em 2016, um colega bolsista que atuava como desenvolvedor no laboratório me convidou para participar de um desses desafios, juntamente com outros dois desenvolvedores. Foi então que fundamos a Besalt Design e Tecnologia.
                             </p>
 
-                            <img src="https://i.ibb.co/tDTySs3/P-20171028-202532-v-HDR-On.jpg"
-                                style="width: 100%; margin: 1.2rem 0rem;" alt="">
+                            <img src="https://i.ibb.co/V3d9C4f/logo-default-white.png"
+                                style="width: 100%; margin: 1.2rem 0rem; padding: 2rem;" alt="">
 
 
                             <p>
@@ -216,6 +216,9 @@
                             <p>
                                 Em 2020, juntamente com os mesmos colegas com quem fundei a Besalt, iniciamos um novo empreendimento: a Pesse Tecnologia em Logística, agregando dois novos membros com experiência em logística.
                             </p>
+
+                            <img src="https://i.ibb.co/sjr3mPR/logo-horizontal-white-fullmdpi.png" style="width: 100%; padding: 2rem;"
+                                alt="">
 
                             <img src="https://i.ibb.co/nm11GLs/pesse.jpg" style="width: 100%; margin: 1.2rem 0rem;"
                                 alt="">
@@ -227,7 +230,7 @@
                             <p>
                                 Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da Universidade de Fortaleza. No ano seguinte, em 2021, ele me convidou para trabalhar na Diretoria de Marketing com o novo CRM da Universidade, pois era preciso alguém com certa experiência em tecnologia e comunicação, aceitei a proposta e estou até hoje trabalhando como analista de CRM para captação de novos alunos.
                             </p>
-                            <p>
+                            <p style="margin-bottom: 0;">
                                 Em 2023, decidi por deixar a Pesse e concentrar meus esforços no aprimoramento das minhas habilidades como desenvolvedor. Assumi o compromisso de embarcar em uma jornada intensiva de estudos com o objetivo de me tornar um profissional exemplar nessa área. Atualmente,
                                 mantenho-me completamente focado nessa meta, impulsionado pela determinação e pelo empenho necessários para alcançá-la.
                             </p>
