--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
 
                             <img src="https://i.ibb.co/V3d9C4f/logo-default-white.png"
                                 style="width: 100%; margin: 1.2rem 0rem; padding: 2rem;" alt="">
+                            
+                                <img src="https://i.ibb.co/vz6BVxV/Whats-App-Image-2024-05-14-at-17-03-42.jpg"
+                                style="width: 100%; margin-bottom: 1.2rem;" alt="">
 
 
                             <p>
