--- a/index.html
+++ b/index.html
@@ -131,25 +131,23 @@
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2014-2016</span> Estágio em
                 Tecnologia da Informação e Comunicação (TIC) no <a href="https://vortex.unifor.br/"
-                    target="_blank"><span class="fs-4" style="color: #a8dacb; font-weight: 700;">VORTEX - UNIFOR</span>
-                    <i class="bi bi-box-arrow-up-right" style="color: #a8dacb;"></i></a></p>
+                    target="_blank"><span class="exp-link fs-4" style="font-weight: 700;">VORTEX - UNIFOR
+                        <i class="bi bi-box-arrow-up-right"></i></span></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2016-2019</span> Bolsista em
                 Tecnologia da Informação e Comunicação (TIC) na UNIFOR pela <a
                     href="https://issuu.com/sofiacavalcante/docs/citilab-versao_digital/20" target="_blank"><span
-                        class="fs-4" style="color: #a8dacb; font-weight: 700;">Fundação de Ciência, Tecnologia e
-                        Inovação de Fortaleza (CITINOVA)</span> <i class="bi bi-box-arrow-up-right"
-                        style="color: #a8dacb;"></i></a></p>
+                        class="exp-link fs-4" style="font-weight: 700;">Fundação de Ciência, Tecnologia e
+                        Inovação de Fortaleza (CITINOVA)</span> <i class="bi bi-box-arrow-up-right"></i></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2020-2023</span> Sócio
-                Empreendedor com a <a href="https://linktr.ee/pessetech" target="_blank"><span class="fs-4"
-                        style="color: #a8dacb; font-weight: 700;">PESSE Tecnologia em Logística</span> <i
-                        class="bi bi-box-arrow-up-right" style="color: #a8dacb;"></i></a></p>
+                Empreendedor com a <a href="https://linktr.ee/pessetech" target="_blank"><span class="exp-link fs-4"
+                        style="font-weight: 700;">PESSE Tecnologia em Logística</span> <i
+                        class="bi bi-box-arrow-up-right"></i></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span> Analista de
-                CRM na <a href="https://unifor.br" target="_blank"><span class="fs-4"
-                        style="color: #a8dacb; font-weight: 700;">UNIFOR</span> <i class="bi bi-box-arrow-up-right"
-                        style="color: #a8dacb;"></i></a></p>
+                CRM na <a href="https://unifor.br" target="_blank"><span class="exp-link fs-4"
+                        style="font-weight: 700;">UNIFOR</span> <i class="bi bi-box-arrow-up-right"></i></a></p>
 
         </div>
 
@@ -173,10 +171,13 @@
                         </div>
                         <div class="modal-body">
                             <p>
-                                Em 2014 iniciei meu primeiro estágio no laboratório de inovação e tecnologia Vortex, situado na Universidade de Fortaleza.
+                                Em 2014 iniciei meu primeiro estágio no laboratório de inovação e tecnologia Vortex,
+                                situado na Universidade de Fortaleza.
                             </p>
                             <p>
-                                Este ambiente de inovação tecnológica, direcionado aos alunos dos cursos de computação, foi o cenário onde iniciei minha jornada profissional. Entre os 20 estagiários, havia apenas eu e outros dois da área de comunicação, imersos em um ambiente predominantemente
+                                Este ambiente de inovação tecnológica, direcionado aos alunos dos cursos de computação,
+                                foi o cenário onde iniciei minha jornada profissional. Entre os 20 estagiários, havia
+                                apenas eu e outros dois da área de comunicação, imersos em um ambiente predominantemente
                                 ocupado por desenvolvedores. Foi ali que meu fascínio pela tecnologia se solidificou.
                             </p>
 
@@ -185,9 +186,16 @@
 
 
                             <p>
-                                Minhas principais responsabilidades incluiam o desenvolvimento de interfaces de usuário (UI) e experiência do usuário (UX), elaborando protótipos e interfaces para posterior implementação pelos desenvolvedores. Também assumi a liderança em projetos de integração acadêmica, facilitando reuniões com os clientes, em sua maioria alunos de Mestrado e Doutorado da Universidade, que buscavam concretizar suas ideias, proporcionando-me uma valiosa experiência multidisciplinar. Além disso, explorei a modelagem 3D para realidade aumentada com o
+                                Minhas principais responsabilidades incluiam o desenvolvimento de interfaces de usuário
+                                (UI) e experiência do usuário (UX), elaborando protótipos e interfaces para posterior
+                                implementação pelos desenvolvedores. Também assumi a liderança em projetos de integração
+                                acadêmica, facilitando reuniões com os clientes, em sua maioria alunos de Mestrado e
+                                Doutorado da Universidade, que buscavam concretizar suas ideias, proporcionando-me uma
+                                valiosa experiência multidisciplinar. Além disso, explorei a modelagem 3D para realidade
+                                aumentada com o
                                 projeto que deu origem ao meu TCC "Iracema Virtual" e desempenhei
-                                diversas funções relacionadas ao design, enriquecendo ainda mais meu repertório profissional.
+                                diversas funções relacionadas ao design, enriquecendo ainda mais meu repertório
+                                profissional.
                             </p>
 
                             <img src="https://i.ibb.co/p1r2p7d/iracema.png" style="width: 100%; margin: 1.2rem 0rem;"
@@ -195,47 +203,68 @@
 
 
                             <p>
-                                Em 2016, ao término do estágio, o coordenador do laboratório reconheceu meu potencial e assegurou bolsas da Prefeitura de Fortaleza para que eu continuasse contribuindo como bolsista, assumindo também o papel de coordenador da equipe de design.
+                                Em 2016, ao término do estágio, o coordenador do laboratório reconheceu meu potencial e
+                                assegurou bolsas da Prefeitura de Fortaleza para que eu continuasse contribuindo como
+                                bolsista, assumindo também o papel de coordenador da equipe de design.
                             </p>
                             <p>
-                                Durante minha permanência no laboratório, participei de diversos desafios, como Hackathons, o Desafio Renault Experience e o Startup Weekend, onde aprendi bastante sobre empreendedorismo.
+                                Durante minha permanência no laboratório, participei de diversos desafios, como
+                                Hackathons, o Desafio Renault Experience e o Startup Weekend, onde aprendi bastante
+                                sobre empreendedorismo.
                             </p>
 
 
                             <p>
-                                Em 2016, um colega bolsista que atuava como desenvolvedor no laboratório me convidou para participar de um desses desafios, juntamente com outros dois desenvolvedores. Foi então que fundamos a Besalt Design e Tecnologia.
+                                Em 2016, um colega bolsista que atuava como desenvolvedor no laboratório me convidou
+                                para participar de um desses desafios, juntamente com outros dois desenvolvedores. Foi
+                                então que fundamos a Besalt Design e Tecnologia.
                             </p>
 
                             <img src="https://i.ibb.co/V3d9C4f/logo-default-white.png"
                                 style="width: 100%; margin: 1.2rem 0rem; padding: 2rem;" alt="">
-                            
-                                <img src="https://i.ibb.co/vz6BVxV/Whats-App-Image-2024-05-14-at-17-03-42.jpg"
+
+                            <img src="https://i.ibb.co/vz6BVxV/Whats-App-Image-2024-05-14-at-17-03-42.jpg"
                                 style="width: 100%; margin-bottom: 1.2rem;" alt="">
 
 
                             <p>
-                                A Besalt era uma softwarehouse especializada no desenvolvimento de softwares sob demanda. No entanto, em 2019, enfrentamos dificuldades para conciliar nossos empregos com as demandas da empresa, o que culminou em seu encerramento.
+                                A Besalt era uma softwarehouse especializada no desenvolvimento de softwares sob
+                                demanda. No entanto, em 2019, enfrentamos dificuldades para conciliar nossos empregos
+                                com as demandas da empresa, o que culminou em seu encerramento.
                             </p>
                             <p>
-                                Em 2020, juntamente com os mesmos colegas com quem fundei a Besalt, iniciamos um novo empreendimento: a Pesse Tecnologia em Logística, agregando dois novos membros com experiência em logística.
+                                Em 2020, juntamente com os mesmos colegas com quem fundei a Besalt, iniciamos um novo
+                                empreendimento: a Pesse Tecnologia em Logística, agregando dois novos membros com
+                                experiência em logística.
                             </p>
 
-                            <img src="https://i.ibb.co/sjr3mPR/logo-horizontal-white-fullmdpi.png" style="width: 100%; padding: 2rem;"
-                                alt="">
+                            <img src="https://i.ibb.co/sjr3mPR/logo-horizontal-white-fullmdpi.png"
+                                style="width: 100%; padding: 2rem;" alt="">
 
                             <img src="https://i.ibb.co/nm11GLs/pesse.jpg" style="width: 100%; margin: 1.2rem 0rem;"
                                 alt="">
 
 
                             <p>
-                                A Pesse era uma startup no qual criamos um aplicativo voltado para otimizar operações de empresas de transporte, permitindo a redução de custos e a melhoria da performance dos veículos por meio da análise detalhada dos dados provenientes dos sensores de telemetria instalados nos veículos.
+                                A Pesse era uma startup no qual criamos um aplicativo voltado para otimizar operações de
+                                empresas de transporte, permitindo a redução de custos e a melhoria da performance dos
+                                veículos por meio da análise detalhada dos dados provenientes dos sensores de telemetria
+                                instalados nos veículos.
                             </p>
                             <p>
-                                Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da Universidade de Fortaleza. No ano seguinte, em 2021, ele me convidou para trabalhar na Diretoria de Marketing com o novo CRM da Universidade, pois era preciso alguém com certa experiência em tecnologia e comunicação, aceitei a proposta e estou até hoje trabalhando como analista de CRM para captação de novos alunos.
+                                Em 2020 o então coordenador do laboratório Vortex se tornou Diretor de Tecnologia da
+                                Universidade de Fortaleza. No ano seguinte, em 2021, ele me convidou para trabalhar na
+                                Diretoria de Marketing com o novo CRM da Universidade, pois era preciso alguém com certa
+                                experiência em tecnologia e comunicação, aceitei a proposta e estou até hoje trabalhando
+                                como analista de CRM para captação de novos alunos.
                             </p>
                             <p style="margin-bottom: 0;">
-                                Em 2023, decidi por deixar a Pesse e concentrar meus esforços no aprimoramento das minhas habilidades como desenvolvedor. Assumi o compromisso de embarcar em uma jornada intensiva de estudos com o objetivo de me tornar um profissional exemplar nessa área. Atualmente,
-                                mantenho-me completamente focado nessa meta, impulsionado pela determinação e pelo empenho necessários para alcançá-la.
+                                Em 2023, decidi por deixar a Pesse e concentrar meus esforços no aprimoramento das
+                                minhas habilidades como desenvolvedor. Assumi o compromisso de embarcar em uma jornada
+                                intensiva de estudos com o objetivo de me tornar um profissional exemplar nessa área.
+                                Atualmente,
+                                mantenho-me completamente focado nessa meta, impulsionado pela determinação e pelo
+                                empenho necessários para alcançá-la.
                             </p>
                         </div>
                         <div class="modal-footer">
@@ -273,13 +302,15 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="https://isanex.com.br/" target="_blank"><img src="https://i.ibb.co/TKKQwXf/isanex.png" class="d-block w-100" alt="..."></a>
+                <a href="https://isanex.com.br/" target="_blank"><img src="https://i.ibb.co/TKKQwXf/isanex.png"
+                        class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
 
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="https://marvelapp.com/442h1b6" target="_blank"><img src="https://i.ibb.co/zJkCtmC/Miva.png" class="d-block w-100" alt="..."></a>
+                <a href="https://marvelapp.com/442h1b6" target="_blank"><img src="https://i.ibb.co/zJkCtmC/Miva.png"
+                        class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
 
                 </div>
@@ -291,7 +322,8 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <a href="https://marvelapp.com/70j4acg" target="_blank"><img src="https://i.ibb.co/qxMDChF/telecall.png" class="d-block w-100" alt="..."></a>
+                <a href="https://marvelapp.com/70j4acg" target="_blank"><img src="https://i.ibb.co/qxMDChF/telecall.png"
+                        class="d-block w-100" alt="..."></a>
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
