--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
                 Tecnologia da Informação e Comunicação (TIC) na UNIFOR pela <a
                     href="https://issuu.com/sofiacavalcante/docs/citilab-versao_digital/20" target="_blank"><span
                         class="exp-link fs-4" style="font-weight: 700;">Fundação de Ciência, Tecnologia e
-                        Inovação de Fortaleza (CITINOVA)</span> <i class="bi bi-box-arrow-up-right"></i></a></p>
+                        Inovação de Fortaleza (CITINOVA) <i class="bi bi-box-arrow-up-right"></i></span></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2020-2023</span> Sócio
                 Empreendedor com a <a href="https://linktr.ee/pessetech" target="_blank"><span class="exp-link fs-4"
-                        style="font-weight: 700;">PESSE Tecnologia em Logística</span> <i
-                        class="bi bi-box-arrow-up-right"></i></a></p>
+                        style="font-weight: 700;">PESSE Tecnologia em Logística <i
+                        class="bi bi-box-arrow-up-right"></i></span></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span> Analista de
                 CRM na <a href="https://unifor.br" target="_blank"><span class="exp-link fs-4"
-                        style="font-weight: 700;">UNIFOR</span> <i class="bi bi-box-arrow-up-right"></i></a></p>
+                        style="font-weight: 700;">UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
         </div>
 
