--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Aglal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Tilt+Warp&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
     <link rel="icon" type="image/png" href="https://img.icons8.com/fluency/48/source-code.png">
@@ -50,7 +55,7 @@
 
     <div id="jumpto-skills" class="container d-grid justify-content-around mt-3 w-100">
 
-        <h1 style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">SKILLS</h1>
+        <h1 class="title" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">SKILLS</h1>
 
         <div class="row cols-sm-3 w-100 m-0">
             <div class="col text-center" data-aos="zoom-in">
@@ -97,7 +102,7 @@
         <!-- FORMAÇÃO -->
 
         <div class="mt-5">
-            <h1 style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">FORMAÇÃO
+            <h1 class="title" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">FORMAÇÃO
             </h1>
         </div>
 
@@ -122,7 +127,7 @@
         <!-- EXP PROFISSIONAL -->
 
         <div class="mt-5" style="overflow-x: hidden;">
-            <h1 class="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">EXPERIÊNCIA
+            <h1 class="title txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">EXPERIÊNCIA
                 PROFISSIONAL
             </h1>
         </div>
@@ -143,7 +148,7 @@
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2020-2023</span> Sócio
                 Empreendedor com a <a href="https://linktr.ee/pessetech" target="_blank"><span class="exp-link fs-4"
                         style="font-weight: 700;">PESSE Tecnologia em Logística <i
-                        class="bi bi-box-arrow-up-right"></i></span></a></p>
+                            class="bi bi-box-arrow-up-right"></i></span></a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2021-atual</span> Analista de
                 CRM na <a href="https://unifor.br" target="_blank"><span class="exp-link fs-4"
@@ -186,14 +191,15 @@
 
 
                             <p>
-                                Minhas principais responsabilidades incluiam o desenvolvimento de interfaces de usuário
+                                Minhas principais responsabilidades incluíam o desenvolvimento de interfaces de usuário
                                 (UI) e experiência do usuário (UX), elaborando protótipos e interfaces para posterior
                                 implementação pelos desenvolvedores. Também assumi a liderança em projetos de integração
                                 acadêmica, facilitando reuniões com os clientes, em sua maioria alunos de Mestrado e
                                 Doutorado da Universidade, que buscavam concretizar suas ideias, proporcionando-me uma
-                                valiosa experiência multidisciplinar. Além disso, explorei a modelagem 3D para realidade
-                                aumentada com o
-                                projeto que deu origem ao meu TCC "Iracema Virtual" e desempenhei
+                                valiosa experiência multidisciplinar. Durante esse período, aprendi sobre gestão de
+                                projetos, levantamento de requisitos e metodologias ágeis, aprimorando minhas
+                                competências técnicas e gerenciais. Além disso, explorei a modelagem 3D para realidade
+                                aumentada com o projeto que deu origem ao meu TCC "Iracema Virtual", e desempenhei
                                 diversas funções relacionadas ao design, enriquecendo ainda mais meu repertório
                                 profissional.
                             </p>
@@ -278,7 +284,7 @@
         <!-- ALGUNS TRABALHOS -->
 
         <div class="mt-5">
-            <h1 class="txt-reduce" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">
+            <h1 class="title txt-reduce" style="font-weight: 700; " data-aos="zoom-in">
                 ALGUNS TRABALHOS
             </h1>
         </div>
@@ -293,39 +299,30 @@
             <button type="button" data-bs-target="#works" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#works" data-bs-slide-to="3" aria-label="Slide 4"></button>
             <button type="button" data-bs-target="#works" data-bs-slide-to="4" aria-label="Slide 5"></button>
-
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="5000">
+            <div class="carousel-item active" data-bs-interval="4000">
                 <img src="https://i.ibb.co/7YhNGHZ/BIT-MED.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+                <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <a href="https://isanex.com.br/" target="_blank"><img src="https://i.ibb.co/TKKQwXf/isanex.png"
                         class="d-block w-100" alt="..."></a>
-                <div class="carousel-caption d-none d-md-block">
-
-                </div>
+                <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <a href="https://marvelapp.com/442h1b6" target="_blank"><img src="https://i.ibb.co/zJkCtmC/Miva.png"
                         class="d-block w-100" alt="..."></a>
-                <div class="carousel-caption d-none d-md-block">
-
-                </div>
+                <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <img src="https://i.ibb.co/4FFhzdb/Resta1.png" class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-
-                </div>
+                <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <a href="https://marvelapp.com/70j4acg" target="_blank"><img src="https://i.ibb.co/qxMDChF/telecall.png"
                         class="d-block w-100" alt="..."></a>
-                <div class="carousel-caption d-none d-md-block">
-                </div>
+                <div class="carousel-caption d-none d-md-block"></div>
             </div>
         </div>
         <button id="carousel-prev-btn" class="carousel-control-prev" type="button" data-bs-target="#works"
