Updated images to local folder

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                 profissional.
                             </p>
 
-                            <img src="https://i.ibb.co/p1r2p7d/iracema.png" style="width: 100%; margin: 1.2rem 0rem;"
+                            <img src="assets/iracema.png" style="width: 100%; margin: 1.2rem 0rem;"
                                 alt="">
 
 
@@ -226,10 +226,10 @@
                                 então que fundamos a Besalt Design e Tecnologia.
                             </p>
 
-                            <img src="https://i.ibb.co/V3d9C4f/logo-default-white.png"
+                            <img src="assets/logo-besalt.png"
                                 style="width: 100%; margin: 1.2rem 0rem; padding: 2rem;" alt="">
 
-                            <img src="https://i.ibb.co/vz6BVxV/Whats-App-Image-2024-05-14-at-17-03-42.jpg"
+                            <img src="assets/team-besalt.jpg"
                                 style="width: 100%; margin-bottom: 1.2rem;" alt="">
 
 
@@ -244,10 +244,10 @@
                                 experiência em logística.
                             </p>
 
-                            <img src="https://i.ibb.co/sjr3mPR/logo-horizontal-white-fullmdpi.png"
+                            <img src="assets/logo-pesse.png"
                                 style="width: 100%; padding: 2rem;" alt="">
 
-                            <img src="https://i.ibb.co/nm11GLs/pesse.jpg" style="width: 100%; margin: 1.2rem 0rem;"
+                            <img src="assets/team-pesse.jpg" style="width: 100%; margin: 1.2rem 0rem;"
                                 alt="">
 
 
