--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                 <p>Javascript</p>
             </div>
             <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/react-native.png" alt="ReactJS" />
+                <p>ReactJS</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/fluency/96/node-js.png" alt="NodeJS" />
+                <p>NodeJS</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
                 <img width="70" height="70" src="https://img.icons8.com/color/96/bootstrap--v2.png" alt="Bootstrap" />
                 <p>Bootstrap</p>
             </div>
@@ -109,19 +117,20 @@
         <div class="container">
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2015</span> Bacharel em
-                Audiovisual e Novas Mídias pela <span class="fs-4"
-                    style="color: #a8dacb; font-weight: 700;">UNIFOR</span> </p>
+                Audiovisual e Novas Mídias pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/1uTd8JG4PqEnJyi0ezSKpTw3wW55wcSu0/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
+                    style="font-weight: 700;">UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2018</span> MBA em Design
-                Gráfico e Digital pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;">UNIFOR</span></p>
+                Gráfico e Digital pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/1LNqebfkpIX25l9nmHFjYHjDReAR_wHkV/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
+                    style="font-weight: 700;">UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
             <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2023</span> Análise e
-                Desenvolvimento de Sistemas pela <span class="fs-4"
-                    style="color: #a8dacb; font-weight: 700;">ESTÁCIO</span></p>
+                Desenvolvimento de Sistemas pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/14MAqqiuoNJYFLv0d0B4a3i1aMgCGWm5Q/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
+                    style="font-weight: 700;">ESTÁCIO <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
-            <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2025</span> Fullstack
-                Javascript Developer pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;">YOUTH
-                    SPACE</span></p>
+            <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2024</span> Fullstack
+                Javascript Developer pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/15K-4a7Uixo7L-bV4KhaSlerhxCtfmR0A/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
+                    style="font-weight: 700;">YOUTH SPACE <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
         </div>
 
         <!-- EXP PROFISSIONAL -->
