Update Skills & Stacks

--- a/index.html
+++ b/index.html
@@ -70,23 +70,13 @@
                 <img width="70" height="70" src="https://img.icons8.com/color/96/javascript--v1.png" alt="Javascript" />
                 <p>Javascript</p>
             </div>
-            <div class="col text-center" data-aos="zoom-in">
-                <img width="70" height="70" src="https://img.icons8.com/color/96/react-native.png" alt="ReactJS" />
-                <p>ReactJS</p>
-            </div>
-            <div class="col text-center" data-aos="zoom-in">
-                <img width="70" height="70" src="https://img.icons8.com/fluency/96/node-js.png" alt="NodeJS" />
-                <p>NodeJS</p>
-            </div>
-            <div class="col text-center" data-aos="zoom-in">
-                <img width="70" height="70" src="https://img.icons8.com/color/96/bootstrap--v2.png" alt="Bootstrap" />
-                <p>Bootstrap</p>
-            </div>
+
             <div class="col text-center" data-aos="zoom-in">
                 <img width="70" height="70" src="https://img.icons8.com/color-glass/96/adobe-photoshop.png"
                     alt="Photoshop" />
                 <p>Photoshop</p>
             </div>
+
             <div class="col text-center" data-aos="zoom-in">
                 <img width="70" height="70" src="https://img.icons8.com/color-glass/96/adobe-illustrator.png"
                     alt="Illustrator" />
@@ -107,6 +97,28 @@
             </div>
         </div>
 
+        <h1 class="title mt-5" style="font-weight: 700; margin-bottom: 2rem;" data-aos="zoom-in">STACKS</h1>
+
+        <div class="row cols-sm-3 w-100 m-0">
+
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/react-native.png" alt="ReactJS" />
+                <p>ReactJS</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/fluency/96/node-js.png" alt="NodeJS" />
+                <p>NodeJS</p>
+            </div>
+            <div class="col text-center" data-aos="zoom-in">
+                <img width="70" height="70" src="https://img.icons8.com/color/96/bootstrap--v2.png" alt="Bootstrap" />
+                <p>Bootstrap</p>
+            </div>
+
+        </div>
+
+        <p class="mt-5 fs-5" style="font-weight: 500; margin-bottom: 2rem;" data-aos="zoom-in">Estou em busca de oportunidades na área de Frontend, onde posso unir minha experiência em UI & UX Design com minhas habilidades em HTML e CSS.</p>
+
+
         <!-- FORMAÇÃO -->
 
         <div class="mt-5">
@@ -117,20 +129,28 @@
         <div class="container">
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2015</span> Bacharel em
-                Audiovisual e Novas Mídias pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/1uTd8JG4PqEnJyi0ezSKpTw3wW55wcSu0/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
-                    style="font-weight: 700;">UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
+                Audiovisual e Novas Mídias pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a
+                        href="https://drive.google.com/file/d/1uTd8JG4PqEnJyi0ezSKpTw3wW55wcSu0/view?usp=sharing"
+                        target="_blank"><span class="exp-link fs-4" style="font-weight: 700;">UNIFOR <i
+                                class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
             <p class="fs-4" data-aos="zoom-in"> <span class="fs-6" style="color: #a8dacb;">2018</span> MBA em Design
-                Gráfico e Digital pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/1LNqebfkpIX25l9nmHFjYHjDReAR_wHkV/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
-                    style="font-weight: 700;">UNIFOR <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
+                Gráfico e Digital pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a
+                        href="https://drive.google.com/file/d/1LNqebfkpIX25l9nmHFjYHjDReAR_wHkV/view?usp=sharing"
+                        target="_blank"><span class="exp-link fs-4" style="font-weight: 700;">UNIFOR <i
+                                class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
             <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2023</span> Análise e
-                Desenvolvimento de Sistemas pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/14MAqqiuoNJYFLv0d0B4a3i1aMgCGWm5Q/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
-                    style="font-weight: 700;">ESTÁCIO <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
+                Desenvolvimento de Sistemas pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a
+                        href="https://drive.google.com/file/d/14MAqqiuoNJYFLv0d0B4a3i1aMgCGWm5Q/view?usp=sharing"
+                        target="_blank"><span class="exp-link fs-4" style="font-weight: 700;">ESTÁCIO <i
+                                class="bi bi-box-arrow-up-right"></i></span> </a></p>
 
             <p class="fs-4" data-aos="zoom-in"><span class="fs-6" style="color: #a8dacb;">2024</span> Fullstack
-                Javascript Developer pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a href="https://drive.google.com/file/d/15K-4a7Uixo7L-bV4KhaSlerhxCtfmR0A/view?usp=sharing" target="_blank"><span class="exp-link fs-4"
-                    style="font-weight: 700;">YOUTH SPACE <i class="bi bi-box-arrow-up-right"></i></span> </a></p>
+                Javascript Developer pela <span class="fs-4" style="color: #a8dacb; font-weight: 700;"><a
+                        href="https://drive.google.com/file/d/15K-4a7Uixo7L-bV4KhaSlerhxCtfmR0A/view?usp=sharing"
+                        target="_blank"><span class="exp-link fs-4" style="font-weight: 700;">YOUTH SPACE <i
+                                class="bi bi-box-arrow-up-right"></i></span> </a></p>
         </div>
 
         <!-- EXP PROFISSIONAL -->
@@ -213,8 +233,7 @@
                                 profissional.
                             </p>
 
-                            <img src="assets/iracema.png" style="width: 100%; margin: 1.2rem 0rem;"
-                                alt="">
+                            <img src="assets/iracema.png" style="width: 100%; margin: 1.2rem 0rem;" alt="">
 
 
                             <p>
@@ -235,11 +254,10 @@
                                 então que fundamos a Besalt Design e Tecnologia.
                             </p>
 
-                            <img src="assets/logo-besalt.png"
-                                style="width: 100%; margin: 1.2rem 0rem; padding: 2rem;" alt="">
+                            <img src="assets/logo-besalt.png" style="width: 100%; margin: 1.2rem 0rem; padding: 2rem;"
+                                alt="">
 
-                            <img src="assets/team-besalt.jpg"
-                                style="width: 100%; margin-bottom: 1.2rem;" alt="">
+                            <img src="assets/team-besalt.jpg" style="width: 100%; margin-bottom: 1.2rem;" alt="">
 
 
                             <p>
@@ -253,11 +271,9 @@
                                 experiência em logística.
                             </p>
 
-                            <img src="assets/logo-pesse.png"
-                                style="width: 100%; padding: 2rem;" alt="">
+                            <img src="assets/logo-pesse.png" style="width: 100%; padding: 2rem;" alt="">
 
-                            <img src="assets/team-pesse.jpg" style="width: 100%; margin: 1.2rem 0rem;"
-                                alt="">
+                            <img src="assets/team-pesse.jpg" style="width: 100%; margin: 1.2rem 0rem;" alt="">
 
 
                             <p>
