--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 
         </div>
 
-        <p class="mt-5 fs-5" style="font-weight: 500; margin-bottom: 2rem;" data-aos="zoom-in">Estou em busca de oportunidades na área de Frontend, onde posso unir minha experiência em UI & UX Design com minhas habilidades em HTML e CSS.</p>
+        <p class="container mt-5 fs-5" style="font-weight: 500; margin-bottom: 2rem;" data-aos="zoom-in">Estou em busca de
+            oportunidades na área de Frontend, onde posso unir minha experiência em UI & UX Design com minhas
+            habilidades em HTML e CSS.</p>
 
 
         <!-- FORMAÇÃO -->
@@ -324,29 +326,35 @@
             <button type="button" data-bs-target="#works" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#works" data-bs-slide-to="3" aria-label="Slide 4"></button>
             <button type="button" data-bs-target="#works" data-bs-slide-to="4" aria-label="Slide 5"></button>
+            <button type="button" data-bs-target="#works" data-bs-slide-to="5" aria-label="Slide 6"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="4000">
-                <img src="https://i.ibb.co/7YhNGHZ/BIT-MED.png" class="d-block w-100" alt="...">
+                <img src="https://i.ibb.co/q0XXRzy/superselect.png" class="d-block w-100"
+                    alt="SuperSelect - CRUD Project">
+                <div class="carousel-caption d-none d-md-block"></div>
+            </div>
+            <div class="carousel-item" data-bs-interval="4000">
+                <img src="https://i.ibb.co/7YhNGHZ/BIT-MED.png" class="d-block w-100" alt="Bitmed">
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <a href="https://isanex.com.br/" target="_blank"><img src="https://i.ibb.co/TKKQwXf/isanex.png"
-                        class="d-block w-100" alt="..."></a>
+                        class="d-block w-100" alt="Isanex"></a>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <a href="https://marvelapp.com/442h1b6" target="_blank"><img src="https://i.ibb.co/zJkCtmC/Miva.png"
-                        class="d-block w-100" alt="..."></a>
+                        class="d-block w-100" alt="Miva"></a>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
-                <img src="https://i.ibb.co/4FFhzdb/Resta1.png" class="d-block w-100" alt="...">
+                <img src="https://i.ibb.co/4FFhzdb/Resta1.png" class="d-block w-100" alt="Resta1">
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
             <div class="carousel-item">
                 <a href="https://marvelapp.com/70j4acg" target="_blank"><img src="https://i.ibb.co/qxMDChF/telecall.png"
-                        class="d-block w-100" alt="..."></a>
+                        class="d-block w-100" alt="Telecall"></a>
                 <div class="carousel-caption d-none d-md-block"></div>
             </div>
         </div>
